GUILE_INIT_MALLOC_LIMIT sets the initial trigger for doing a GC. The
default is 200 kb.

Debugging operations for the freelist have been deprecated, along with
the C variables that control garbage collection.  The environment
variables GUILE_MAX_SEGMENT_SIZE, GUILE_INIT_SEGMENT_SIZE_2,
GUILE_INIT_SEGMENT_SIZE_1, and GUILE_MIN_YIELD_2 should be used.

** The struct scm_cell has been renamed to scm_t_cell

This is in accordance to Guile's naming scheme for types.  Note that
the name scm_cell is now used for a function that allocates and
initializes a new cell (see below).

** New functions for memory management

A new set of functions for memory management has been added since the
old way (scm_must_malloc, scm_must_free, etc) was error prone and
indeed, Guile itself contained some long standing bugs that could
cause aborts in long running programs.

The new functions are more symmetrical and do not need cooperation
from smob free routines, among other improvements.

The new functions are scm_malloc, scm_realloc, scm_calloc, scm_strdup,
scm_strndup, scm_gc_malloc, scm_gc_calloc, scm_gc_realloc,
scm_gc_free, scm_gc_register_collectable_memory, and
scm_gc_unregister_collectable_memory.  Refer to the manual for more
details and for upgrading instructions.

The old functions for memory management have been deprecated.  They
are: scm_must_malloc, scm_must_realloc, scm_must_free,
scm_must_strdup, scm_must_strndup, scm_done_malloc, scm_done_free.

** New function: scm_str2string

This function creates a scheme string from a 0-terminated C string.  The input
string is copied.

** Declarations of exported features are marked with SCM_API.

Every declaration of a feature that belongs to the exported Guile API
has been marked by adding the macro "SCM_API" to the start of the
declaration.  This macro can expand into different things, the most
common of which is just "extern" for Unix platforms.  On Win32, it can
be used to control which symbols are exported from a DLL.
